bloodc/src/parser/snapshots/bloodc__parser__tests__pub_use_reexport.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [
        Simple {
            visibility: Public,
            path: ModulePath {
                segments: [
                    Spanned {
                        node: SymbolU32 {
                            value: 1,
                        },
                        span: Span {
                            start: 8,
                            end: 11,
                            start_line: 1,
                            start_col: 9,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 2,
                        },
                        span: Span {
                            start: 12,
                            end: 14,
                            start_line: 1,
                            start_col: 13,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 3,
                        },
                        span: Span {
                            start: 16,
                            end: 23,
                            start_line: 1,
                            start_col: 17,
                        },
                    },
                ],
                span: Span {
                    start: 8,
                    end: 23,
                    start_line: 1,
                    start_col: 9,
                },
            },
            alias: None,
            span: Span {
                start: 0,
                end: 24,
                start_line: 1,
                start_col: 1,
            },
        },
    ],
    declarations: [],
    span: Span {
        start: 0,
        end: 24,
        start_line: 1,
        start_col: 1,
    },
}
